// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tag Default 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  background-color: #3498db;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  color: white;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
}

.c0:hover {
  border: 2px solid rgba(0,0,0,0.32);
  padding: 5px 0px 7px 7px;
  background-color: #2980b9;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  color: white;
  cursor: pointer;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
  >
    THIS IS A TAG
  </div>
</div>
`;

exports[`Storyshots Tag Multiple tags 1`] = `
.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 8px 8px 8px;
  background-color: #3498db;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  color: white;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
}

.c1:hover {
  border: 2px solid rgba(0,0,0,0.32);
  padding: 5px 0px 7px 7px;
  background-color: #2980b9;
}

.c1 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c1:hover .icon,
.c1:focus .icon {
  padding-right: 7px;
  color: white;
  cursor: pointer;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  background-color: #3498db;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  color: white;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
}

.c0:hover {
  border: 2px solid rgba(0,0,0,0.32);
  padding: 5px 0px 7px 7px;
  background-color: #2980b9;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  color: white;
  cursor: pointer;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    value="18-08-16"
  >
    Aug 16, 2018
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
  <div
    className="c0"
  >
    This is a long removable tag
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
  <div
    className="c1"
  >
    And that's an even bigger and wider not removable tag
  </div>
</div>
`;

exports[`Storyshots Tag Removable 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  background-color: #3498db;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  color: white;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
}

.c0:hover {
  border: 2px solid rgba(0,0,0,0.32);
  padding: 5px 0px 7px 7px;
  background-color: #2980b9;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  color: white;
  cursor: pointer;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
  >
    You can remove this tag
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tag Removable with value 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  border: 1px solid rgba(0,0,0,0.16);
  border-radius: 4px;
  padding: 6px 0px 8px 8px;
  background-color: #3498db;
  height: 32px;
  margin: 0 8px 8px 0;
  font-size: 14px;
  color: white;
  font-family: Lato;
  font-weight: 600;
  cursor: default;
  pointer-events: none;
}

.c0:hover {
  border: 2px solid rgba(0,0,0,0.32);
  padding: 5px 0px 7px 7px;
  background-color: #2980b9;
}

.c0 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  padding: 5px 8px 8px 8px;
  font-size: 8px;
  color: rgba(0,0,0,0.32);
  pointer-events: auto;
}

.c0:hover .icon,
.c0:focus .icon {
  padding-right: 7px;
  color: white;
  cursor: pointer;
}

<div
  style={
    Object {
      "marginTop": "20px",
    }
  }
>
  <div
    className="c0"
    value="1"
  >
    Removable Tag #1
    <div
      className="icon"
      onClick={[Function]}
    >
      <i
        className="wg-close"
      />
    </div>
  </div>
</div>
`;
